# OMS-Ultra-Low-Latency-Order-Management-System

./: CMakeLists.txt  README.md
benchmarks/: book_benchmark.cpp
data/: README.md
data/lobster/: AMZN_sample_message.csv
include/: oms.hpp
include/analytics/: market_stats.hpp
include/app/: real_data_modes.hpp
include/backtest/: alpha_decay.hpp  backtest_engine.hpp
include/book/: l2_book.hpp  order.hpp  order_book.hpp  price_level.hpp  trade.hpp
include/common/: timestamp.hpp  types.hpp
include/engine/: matching_engine.hpp  oms_engine.hpp
include/io/: binance_trades_feed.hpp  csv_reader.hpp  lobster_feed.hpp  market_replay.hpp  order_command.hpp  wal.hpp  wal_replay.hpp
include/memory/: pool_allocator.hpp
include/queue/: spsc_queue.hpp
include/signals/: composite.hpp  momentum.hpp  obi.hpp  vpin.hpp
include/ui/: console_visual.hpp  html_report.hpp
scripts/: fetch_market_data.ps1  fetch_market_data.sh  generate_lobster_sample.py
src/: demo.cpp  matching_demo.cpp  oms_main.cpp
tests/: test_order_book.cpp
